engine/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_usage_wide.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
expression: rendered
---

› Ask Hexa to do anything

  Luna Reserve default · /tmp/project
